confirm working animal listing component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,4 @@
   </h1>
 </div>
 <h2>Here are our animals</h2>
-<app-list-animals></app-list-animals>
+<app-list-animals [tempAnimals]="animals"></app-list-animals>
