--- a/src/app/list-animals/list-animals.component.html
+++ b/src/app/list-animals/list-animals.component.html
@@ -1,5 +1,5 @@
 <div class="animals">
-	<div class="animal" *ngFor="let animal of animals">
+	<div class="animal" *ngFor="let animal of tempAnimals">
 		<h3>{{animal.name}}</h3>
 		<div class="meta">
 			<div class="meta-item"><span class="meta-title">Species:</span> {{animal.species}}</div>
