add some basic sass

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
     Welcome to {{ title }}!
   </h1>
 </div>
-<h2>Here are our animals</h2>
+<h2>Here are your animals</h2>
 <app-list-animals [tempAnimals]="animals"></app-list-animals>
