create alternate edit box for each listed animal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,7 @@
   </h1>
 </div>
 <h2>Here are your animals</h2>
+<div class="text-right">
+	<button class="" type="button" name="button" (click)="clickToAdd()">Add New</button>
+</div>
 <app-list-animals [tempAnimals]="animals"></app-list-animals>
