--- a/src/app/list-animals/list-animals.component.html
+++ b/src/app/list-animals/list-animals.component.html
@@ -1,15 +1,32 @@
 <div class="animals">
 	<div class="animal" *ngFor="let animal of tempAnimals">
-		<h3>{{animal.name}}</h3>
-		<div class="meta">
-			<div class="meta-item"><span class="meta-title">Species:</span> {{animal.species}}</div>
-			<div class="meta-item"><span class="meta-title">Age:</span> {{animal.age}}</div>
-			<div class="meta-item"><span class="meta-title">Diet:</span> {{animal.diet}}</div>
-			<div class="meta-item"><span class="meta-title">Location:</span> {{animal.location}}</div>
-			<div class="meta-item"><span class="meta-title">Caretakers:</span> {{animal.caretakers}}</div>
-			<div class="meta-item"><span class="meta-title">Sex:</span> {{animal.sex}}</div>
-			<div class="meta-item"><span class="meta-title">Likes:</span> {{animal.likes}}</div>
-			<div class="meta-item"><span class="meta-title">Dislikes:</span> {{animal.dislikes}}</div>
-		</div>
+		<div *ngIf="currentlyEditing != animal; then animalBlock; else editBox"></div>
+		<ng-template #animalBlock>
+			<h3>{{animal.name}}</h3>
+			<div class="meta">
+				<div class="meta-item"><span class="meta-title">Species:</span>{{animal.species}}</div>
+				<div class="meta-item"><span class="meta-title">Age:</span>{{animal.age}}</div>
+				<div class="meta-item"><span class="meta-title">Diet:</span>{{animal.diet}}</div>
+				<div class="meta-item"><span class="meta-title">Location:</span>{{animal.location}}</div>
+				<div class="meta-item"><span class="meta-title">Caretakers:</span>{{animal.caretakers}}</div>
+				<div class="meta-item"><span class="meta-title">Sex:</span>{{animal.sex}}</div>
+				<div class="meta-item"><span class="meta-title">Likes:</span>{{animal.likes}}</div>
+				<div class="meta-item"><span class="meta-title">Dislikes:</span>{{animal.dislikes}}</div>
+			</div>
+		</ng-template>
+		<ng-template #editBox>
+			<h3>{{animal.name}}</h3>
+			<div class="meta">
+				<div class="meta-item"><span class="meta-title">Species:</span>{{animal.species}}</div>
+				<div class="meta-item"><span class="meta-title">Age:</span>{{animal.age}}</div>
+				<div class="meta-item"><span class="meta-title">Diet:</span>{{animal.diet}}</div>
+				<div class="meta-item"><span class="meta-title">Location:</span>{{animal.location}}</div>
+				<div class="meta-item"><span class="meta-title">Caretakers:</span>{{animal.caretakers}}</div>
+				<div class="meta-item"><span class="meta-title">Sex:</span>{{animal.sex}}</div>
+				<div class="meta-item"><span class="meta-title">Likes:</span>{{animal.likes}}</div>
+				<div class="meta-item"><span class="meta-title">Dislikes:</span>{{animal.dislikes}}</div>
+			</div>
+		</ng-template>
 	</div>
+
 </div>
