--- a/src/app/edit-animal/edit-animal.component.html
+++ b/src/app/edit-animal/edit-animal.component.html
@@ -1,12 +1,12 @@
-<h3>{{animal.name}}</h3>
+<h3>Name</h3>
 <div class="meta">
-	<div class="meta-item"><span class="meta-title">Species:</span>{{animal.species}}</div>
-	<div class="meta-item"><span class="meta-title">Age:</span>{{animal.age}}</div>
-	<div class="meta-item"><span class="meta-title">Diet:</span>{{animal.diet}}</div>
-	<div class="meta-item"><span class="meta-title">Location:</span>{{animal.location}}</div>
-	<div class="meta-item"><span class="meta-title">Caretakers:</span>{{animal.caretakers}}</div>
-	<div class="meta-item"><span class="meta-title">Sex:</span>{{animal.sex}}</div>
-	<div class="meta-item"><span class="meta-title">Likes:</span>{{animal.likes}}</div>
-	<div class="meta-item"><span class="meta-title">Dislikes:</span>{{animal.dislikes}}</div>
+	<div class="meta-item"><span class="meta-title">Species:</span>asdf</div>
+	<div class="meta-item"><span class="meta-title">Age:</span>asdf</div>
+	<div class="meta-item"><span class="meta-title">Diet:</span>asdf</div>
+	<div class="meta-item"><span class="meta-title">Location:</span>asdf</div>
+	<div class="meta-item"><span class="meta-title">Caretakers:</span>asdf</div>
+	<div class="meta-item"><span class="meta-title">Sex:</span>asdf</div>
+	<div class="meta-item"><span class="meta-title">Likes:</span>asdf</div>
+	<div class="meta-item"><span class="meta-title">Dislikes:</span>asdf</div>
 </div>
 <button type="button" name="button">Done</button>
