--- a/src/app/list-animals/list-animals.component.html
+++ b/src/app/list-animals/list-animals.component.html
@@ -3,7 +3,6 @@
 		<div *ngIf="currentlyEditing != animal; then animalBlock; else editBox"></div>
 		<ng-template #animalBlock>
 			<h3>{{animal.name}}</h3>
-			<button type="button" name="button" (click)="onEditClick(animal)">Edit</button>
 			<div class="meta">
 				<div class="meta-item"><span class="meta-title">Species:</span>{{animal.species}}</div>
 				<div class="meta-item"><span class="meta-title">Age:</span>{{animal.age}}</div>
@@ -14,9 +13,10 @@
 				<div class="meta-item"><span class="meta-title">Likes:</span>{{animal.likes}}</div>
 				<div class="meta-item"><span class="meta-title">Dislikes:</span>{{animal.dislikes}}</div>
 			</div>
+			<button type="button" name="button" (click)="onEditClick(animal)">Edit</button>
 		</ng-template>
 		<ng-template #editBox>
-			<app-edit-animal></app-edit-animal>
+			<app-edit-animal [currentlyEditingThis]="currentlyEditing"></app-edit-animal>
 		</ng-template>
 	</div>
 
