--- a/src/app/add-animal/add-animal.component.html
+++ b/src/app/add-animal/add-animal.component.html
@@ -1,3 +1,3 @@
-<p>
-  add-animal works!
-</p>
+<div class="text-right">
+	<button class="" type="button" name="button" (click)="clickToAdd()">Add New</button>
+</div>
